<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/toolbar_layout"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content">
        <EditText
            android:hint="@string/text_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_UserId" />

        <EditText
            android:hint="@string/text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/et_Pwd" />

    </LinearLayout>

    <Button
        android:onClick="loginClick"
        android:layout_marginTop="20dp"
        android:text="@string/text_login"
        android:layout_gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />
</LinearLayout>