<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- title bar -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/toolbar_layout"/>
        <ImageView
            android:id="@+id/iv_RightButton"
            android:onClick="toolbarRightButtonClick"
            android:src="@android:drawable/ic_menu_save"
            android:padding="10dp"
            android:layout_gravity="right|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="16sp"
            android:paddingRight="6sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_PaymentStoreName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_payment_store_name"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_PaymentAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_payment_amount"
                    android:inputType="numberDecimal"/>
            </android.support.design.widget.TextInputLayout>


            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:layout_marginTop="15dp"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content">-->

                <!--<EditText-->
                    <!--android:id="@+id/et_PaymentDate"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:hint="@string/text_payment_date"-->
                    <!--android:inputType="text"/>-->
            <!--</android.support.design.widget.TextInputLayout>-->

            <EditText
                android:id="@+id/et_PaymentDate"
                android:focusable="false"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_payment_date"
                android:inputType="text"/>


            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_Summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_summary"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:layout_marginTop="15dp"
                android:id="@+id/spn_AccountTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Spinner>

            <TextView
                android:layout_marginTop="15dp"
                android:text="@string/text_receipt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_marginTop="10dp"
                android:minWidth="100dp"
                android:minHeight="100dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>